[package]
version = "1.0.0"
name = "filedrop"
description = "light cloud server that comes with a web server which allows u to download files from a repertory on the server"
authors = ["Noé Favier <noe.favier@outlook.com>"]
repository = "https://github.com/Noe-Favier/file_drop"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
